<resources>
    <string name="app_name">CyprJakDojade</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JakDojadeCypr</string>
    <string name="nav_header_subtitle">Połączenia międzymiastowe na Cyprze</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ustawienia</string>

    <string name="menu_home">Cypr - połączenia</string>
    <string name="menu_gallery">Cypr - rozkłady</string>
    <string name="menu_slideshow">Cypr - zaloguj</string>
    <string name="menu_szukajPolaczenia">Znajdź połączenie</string>
    <string name="menu_trasa">Trasa</string>
    <string name="menu_zaloguj">Zaloguj się</string>
    <string name="button">Wyszukaj</string>
    <string name="name">Przystanek początkowy</string>
    <string name="wyszukaj">wyszukaj</string>
    <string name="wyszukaj_tras">wyszukaj_tras</string>
    <string name="from">From</string>
    <string name="name2">Przystanek końcowy</string>
    <string name="to">To</string>
    <string name="dostepne_polaczenia">Dostępne połączenia</string>
    <string name="przystanek1">przystanek początkowy</string>
    <string name="przystanek2">przystanek końcowy</string>
    <string name="godzina">godzina</string>
</resources>